--- a/public/index.css
+++ b/public/index.css
@@ -1,27 +1,107 @@
-html{
-  min-width: 1024px;
+:root{
+  --color-all: #31b48d;
+  --color-pending: #38a1f2;
+  --color-active: #7538c7;
+  --color-closed: #3b67a4;
 }
-#projects-overview{
+
+html {
+  min-width: 1280px;
+  font-family: serif, "Microsoft YaHei";
+}
+
+#projects-overview {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
+
 .overview-card {
-  flex: 1 1 300px;
-  margin:10px;
+  position: relative;
+  flex: 1 0 300px;
+  margin: 10px;
+  padding: 10px 20px;
+  border-radius: 4px;
+  color: white;
 }
-#projects-details table{
+
+.overview-card p {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#overview-all {
+  background-color: var(--color-all);
+}
+
+#overview-pending {
+  background-color: var(--color-pending);
+}
+
+#overview-active {
+  background-color: var(--color-active);
+}
+
+#overview-closed {
+  background-color: var(--color-closed);
+}
+
+.projects-type {
+  font-size: 14px;
+}
+
+.projects-count {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 30px;
+}
+
+.card-tag {
+  font-size: 12px;
+  border-radius: 4px;
+  padding: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.projects-percentage {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 30px;
+}
+
+.icon {
+  opacity: 0.3;
+  font-size: 100px;
+  position: absolute;
+  bottom: 0;
+  right: 12px;
+}
+
+#projects-details table {
   border-collapse: collapse;
+  color: #333;
+  width: 100%;
 }
-#projects-details tr{
-  border-bottom: 1px solid;
+#projects-details caption{
+  text-align: left;
+  font-size: 24px;
+  font-weight: bold;
 }
+#projects-details thead{
+  background: #ebecf0;
+}
+#projects-details tr {
+  border-bottom: 1px solid #dcdee3;
+}
+
 #projects-details tr td:nth-child(2) {
-  width: 200px;
-  overflow : hidden;
+  width: 60%;
+  margin: 0 100px;
+  overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  word-break:break-all;
+  word-break: break-all;
 }
