--- a/public/index.css
+++ b/public/index.css
@@ -3,14 +3,15 @@
   --color-blue: #38a1f2;
   --color-purple: #7538c7;
   --color-deepblue: #3b67a4;
-  --color-red:  #ee706d;
-  --status-pending:  #ee706d;
+
+  --status-pending: #ee706d;
   --status-active: #666666;
   --status-closed: #f7da47;
-  --color-text-deep: #333;
-  --color-table-background: #ebecf0;
-  --color-table-brder: #dcdee3
+  --delete-button: var(--status-closed);
 
+  --table-head: #ebecf0;
+  --table-border: #dcdee3;
+  --gray-text: #333;
 }
 
 html {
@@ -21,10 +22,12 @@ html {
 body {
   margin: 0;
 }
-#main{
+
+#main {
   width: 1368px;
   margin: 0 auto;
 }
+
 #projects-overview {
   display: flex;
   flex-direction: row;
@@ -97,7 +100,7 @@ body {
   margin: 10px;
   table-layout: auto;
   border-collapse: collapse;
-  color: #333;
+  color: var(--gray-text);
   /*width: 100%;*/
 }
 
@@ -109,16 +112,18 @@ body {
 }
 
 #projects-details thead {
-  background: #ebecf0;
+  background: var(--table-head);
 
 }
 
 #projects-details thead td:nth-child(1) {
   width: 20%;
 }
+
 #projects-details thead td:nth-child(2) {
   width: 40%;
 }
+
 #projects-details thead td:nth-child(n+3) {
   width: 10%;
 }
@@ -127,6 +132,7 @@ body {
   height: 20px;
   padding: 12px;
 }
+
 #projects-details tbody td {
   height: 36px;
   padding: 12px;
@@ -146,25 +152,30 @@ body {
 }
 
 #projects-details tr {
-  border-bottom: 1px solid #dcdee3;
+  border-bottom: var(--table-border);
 }
-.status-pending{
+
+.status-pending {
   color: var(--status-pending);
 }
-.status-active{
+
+.status-active {
   color: var(--status-active);
 }
-.status-closed{
+
+.status-closed {
   color: var(--status-closed);
 }
+
 .del-btn {
-  background: var(--color-red);
+  background: var(--delete-button);
   color: white;
   border-radius: 4px;
   padding: 6px 12px;
   border-style: none;
   transition: opacity 100ms;
 }
+
 .del-btn:active {
   opacity: 0.5;
 }
