--- a/public/index.css
+++ b/public/index.css
@@ -7,7 +7,7 @@
   --status-pending: #ee706d;
   --status-active: #666666;
   --status-closed: #f7da47;
-  --delete-button: var(--status-closed);
+  --delete-button: var(--status-pending);
 
   --table-head: #ebecf0;
   --table-border: #dcdee3;
@@ -16,11 +16,12 @@
 
 html {
   min-width: 1280px;
-  font-family: serif, "Microsoft YaHei";
+  font-family: "Times New Roman", "Droid Sans Fallback";
+  font-size-adjust: 0.48;
 }
 
 body {
-  margin: 0;
+  margin: 20px;
 }
 
 #main {
@@ -32,6 +33,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  font-family: "Jomolhari", "Droid Sans Fallback";
 }
 
 .overview-card {
@@ -78,7 +80,7 @@ body {
 .card-tag {
   font-size: 12px;
   border-radius: 4px;
-  padding: 4px;
+  padding: 2px 4px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -134,25 +136,25 @@ body {
 }
 
 #projects-details tbody td {
-  height: 36px;
   padding: 12px;
-  transition: 250ms;
+  vertical-align: middle;
 }
 
 #projects-details p {
-  line-height: 16px;
+  line-height: 20px;
   margin: 0;
-  height: 32px;
+  max-height: 40px;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  word-break: break-word;
+  word-break: break-all;
   transition: 250ms;
+
 }
 
 #projects-details tr {
-  border-bottom: var(--table-border);
+  border-bottom: 1px solid var(--table-border);
 }
 
 .status-pending {
@@ -174,6 +176,7 @@ body {
   padding: 6px 12px;
   border-style: none;
   transition: opacity 100ms;
+  cursor: pointer;
 }
 
 .del-btn:active {
