--- a/public/index.css
+++ b/public/index.css
@@ -40,7 +40,7 @@ body {
   position: relative;
   flex: 1 0 0;
   margin: 10px;
-  padding: 10px 20px;
+  padding: 5px 20px;
   border-radius: 4px;
   color: white;
 }
@@ -78,9 +78,11 @@ body {
 }
 
 .card-tag {
+  align-self: center;
   font-size: 12px;
+  line-height: 20px;
   border-radius: 4px;
-  padding: 2px 4px;
+  padding: 0 4px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
