--- a/public/index.css
+++ b/public/index.css
@@ -29,6 +29,7 @@ body {
   margin: 0 auto;
 }
 
+
 #projects-overview {
   display: flex;
   flex-direction: row;
@@ -183,4 +184,49 @@ body {
 
 .del-btn:active {
   opacity: 0.5;
+}
+
+#mask {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.confirm-box {
+  width: 320px;
+  align-self: center;
+  background: white;
+  border-radius: 4px;
+}
+.icon-guanbi{
+  display: inline-block;
+  text-align: right;
+}
+#buttons{
+  text-align: right;
+  padding: 16px;
+}
+.confirm-box button {
+  padding: 4px 8px;
+  font-size: 12px;
+  font-family: "Microsoft YaHei",sans-serif;
+  border-radius: 3px;
+}
+.confirm-button {
+  border: 1px solid;
+  background-color: #3080fe;
+  border-color: #e2ddd5 #90897e #90897e #e2ddd5;
+  color: white;
+}
+.cancel-button {
+  background-color: white;
+  border: 1px solid;
+  color: #333;
+  border-color: #bec1cb #6d7076 #6d7076 #bec1cb;
 }
