--- a/public/index.css
+++ b/public/index.css
@@ -13,7 +13,9 @@
   --table-border: #dcdee3;
   --gray-text: #333;
 }
-
+*{
+  margin:0;
+}
 html {
   min-width: 1280px;
   font-family: "Times New Roman", "Droid Sans Fallback";
@@ -199,31 +201,70 @@ body {
 }
 
 .confirm-box {
-  width: 320px;
+  width: 340px;
   align-self: center;
   background: white;
   border-radius: 4px;
 }
-.icon-guanbi{
-  display: inline-block;
-  text-align: right;
+
+.close-button {
+  margin: 20px;
+  color: #666;
+  display: block;
+  float: right;
+  border-style: none;
+  background: none;
+  font-size:16px;
 }
-#buttons{
+.close-button:active {
+  color: red;
+}
+.hint-box {
+  margin:48px 0  12px 20px;
+}
+.hint-icon {
+  color: #f1c826;
+  font-size: 24px;
+  margin-right: 12px;
+  display: inline-block;
+  vertical-align: top;
+}
+.hint-body{
+  display: inline-block;
+}
+.hint-title {
+
+  margin-bottom: 0;
+  line-height: 24px;
+  color: #333;
+  font-size: 20px;
+}
+.hint-text{
+  color: #666;
+  margin-top: 8px;
+  font-size: 14px;
+
+}
+
+#buttons {
   text-align: right;
   padding: 16px;
 }
-.confirm-box button {
-  padding: 4px 8px;
+
+#buttons button {
+  padding: 6px 12px;
   font-size: 12px;
-  font-family: "Microsoft YaHei",sans-serif;
+  font-family: "Microsoft YaHei", sans-serif;
   border-radius: 3px;
 }
+
 .confirm-button {
   border: 1px solid;
   background-color: #3080fe;
   border-color: #e2ddd5 #90897e #90897e #e2ddd5;
   color: white;
 }
+
 .cancel-button {
   background-color: white;
   border: 1px solid;
