--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,7 @@
-*{
-  margin:0;
+* {
+  margin: 0;
 }
+
 html {
   min-width: 1280px;
   font-family: "Times New Roman", "Droid Sans Fallback";
@@ -17,14 +18,14 @@ body {
 }
 
 
-#projects-overview {
+#overview-cards {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   font-family: "Jomolhari", "Droid Sans Fallback";
 }
 
-.overview-card {
+#overview-cards article {
   position: relative;
   flex: 1 0 0;
   margin: 10px;
@@ -33,33 +34,33 @@ body {
   color: white;
 }
 
-.overview-card p {
+#overview-cards article p {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-#overview-ALL {
+#card-ALL {
   background-color: #31b48d;
 }
 
-#overview-PENDING {
+#card-PENDING {
   background-color: #38a1f2;
 }
 
-#overview-ACTIVE {
+#card-ACTIVE {
   background-color: #7538c7;
 }
 
-#overview-CLOSED {
+#card-CLOSED {
   background-color: #3b67a4;
 }
 
-.projects-type {
+.card-type {
   font-size: 14px;
 }
 
-.projects-count {
+.card-count {
   font-size: 32px;
   font-weight: 500;
   line-height: 30px;
@@ -74,13 +75,13 @@ body {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.projects-percentage {
+.card-percent {
   font-size: 32px;
   font-weight: 500;
   line-height: 30px;
 }
 
-.icon {
+.card-icon {
   opacity: 0.3;
   font-size: 100px;
   position: absolute;
@@ -103,25 +104,24 @@ body {
   font-weight: bold;
 }
 
-#projects-details thead {
-  background: #ebecf0;
-
-}
-
-#projects-details thead td:nth-child(1) {
+#projects-details td:nth-child(1) {
   width: 20%;
 }
 
-#projects-details thead td:nth-child(2) {
+#projects-details td:nth-child(2) {
   width: 40%;
 }
 
-#projects-details thead td:nth-child(n+3) {
+#projects-details td:nth-child(n+3) {
   width: 10%;
 }
 
+#projects-details thead {
+  background: #ebecf0;
+}
+
 #projects-details thead td {
-  height: 20px;
+  height: 24px;
   padding: 12px;
 }
 
@@ -130,10 +130,11 @@ body {
   vertical-align: middle;
 }
 
+
 #projects-details p {
-  line-height: 20px;
+  line-height: 24px;
   margin: 0;
-  max-height: 40px;
+  max-height: 48px;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -163,7 +164,7 @@ body {
   background: #ee706d;
   color: white;
   border-radius: 4px;
-  padding: 6px 12px;
+  padding: 8px 12px;
   border-style: none;
   transition: opacity 100ms;
   cursor: pointer;
@@ -185,28 +186,31 @@ body {
   justify-content: center;
 }
 
-.confirm-box {
+.popup-box {
   width: 340px;
   align-self: center;
   background: white;
   border-radius: 4px;
 }
 
-#close-button {
+#close-btn {
   margin: 20px;
   color: #666;
   display: block;
   float: right;
   border-style: none;
   background: none;
-  font-size:16px;
+  font-size: 16px;
 }
-#close-button:active {
+
+#close-btn:active {
   color: red;
 }
-.hint-box {
-  margin:48px 0  12px 20px;
+
+.hint-msg {
+  margin: 48px 0 12px 20px;
 }
+
 .hint-icon {
   color: #f1c826;
   font-size: 24px;
@@ -214,9 +218,11 @@ body {
   display: inline-block;
   vertical-align: top;
 }
-.hint-body{
+
+.hint-body {
   display: inline-block;
 }
+
 .hint-title {
 
   margin-bottom: 0;
@@ -224,7 +230,8 @@ body {
   color: #333;
   font-size: 20px;
 }
-.hint-text{
+
+.hint-text {
   color: #666;
   margin-top: 8px;
   font-size: 14px;
@@ -243,14 +250,14 @@ body {
   border-radius: 3px;
 }
 
-#confirm-button {
+#confirm-btn {
   border: 1px solid;
   background-color: #3080fe;
   border-color: #e2ddd5 #90897e #90897e #e2ddd5;
   color: white;
 }
 
-#cancel-button {
+#cancel-btn {
   background-color: white;
   border: 1px solid;
   color: #333;
