--- a/public/index.css
+++ b/public/index.css
@@ -3,9 +3,7 @@
 }
 
 html {
-  min-width: 1280px;
   font-family: serif, "Microsoft YaHei";
-  font-size-adjust: 0.48;
 }
 
 body {
@@ -13,7 +11,7 @@ body {
 }
 
 #main {
-  width: 1368px;
+  width: 1366px;
   margin: 0 auto;
 }
 
@@ -28,13 +26,13 @@ body {
   position: relative;
   flex: 1 0 0;
   margin: 10px;
-  padding: 16px 20px;
+  padding: 10px;
   border-radius: 4px;
   color: white;
 }
 
 #overview-cards article p {
-  margin-bottom: 16px;
+  margin: 16px 4px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
