--- a/index.css
+++ b/index.css
@@ -168,7 +168,7 @@ body {
   opacity: 0.3;
 }
 
-#mask {
+#dialog {
   position: fixed;
   left: 0;
   top: 0;
@@ -180,7 +180,7 @@ body {
   justify-content: center;
 }
 
-.msg-box {
+.dialog-box {
   width: 340px;
   align-self: center;
   background: white;
