--- a/index.css
+++ b/index.css
@@ -1,8 +1,5 @@
 * {
   margin: 0;
-}
-
-html {
   font-family: serif, "Microsoft YaHei";
 }
 
@@ -11,30 +8,27 @@ body {
 }
 
 #main {
-  width: 1366px;
   margin: 0 auto;
+  width: 1366px;
 }
-
 
 #overview-cards {
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
 }
 
 #overview-cards article {
-  position: relative;
   flex: 1 0 0;
   margin: 10px;
   padding: 10px;
   border-radius: 4px;
   color: white;
+  position: relative;
 }
 
 #overview-cards article p {
   margin: 16px 4px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -65,11 +59,11 @@ body {
 }
 
 .card-tag {
+  padding: 0 4px;
   align-self: center;
   font-size: 12px;
   line-height: 24px;
   border-radius: 4px;
-  padding: 0 4px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -80,11 +74,11 @@ body {
 }
 
 .card-icon {
-  opacity: 0.3;
-  font-size: 100px;
   position: absolute;
   bottom: 0;
   right: 12px;
+  font-size: 100px;
+  opacity: 0.3;
 }
 
 #projects-details table {
@@ -92,14 +86,17 @@ body {
   table-layout: auto;
   border-collapse: collapse;
   color: #333;
-  /*width: 100%;*/
 }
 
 #projects-details caption {
   margin: 20px 0;
   text-align: left;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 700;
+}
+
+#projects-details tr {
+  border-bottom: 1px solid #dcdee3;
 }
 
 #projects-details td:nth-child(1) {
@@ -114,8 +111,10 @@ body {
   width: 10%;
 }
 
+
 #projects-details thead {
   background: #ebecf0;
+
 }
 
 #projects-details thead td {
@@ -123,24 +122,20 @@ body {
   padding: 12px;
 }
 
+
 #projects-details tbody td {
   padding: 12px;
   vertical-align: middle;
 }
 
-
 #projects-details p {
-  line-height: 24px;
   max-height: 48px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
   word-break: break-all;
-}
-
-#projects-details tr {
-  border-bottom: 1px solid #dcdee3;
+  line-height: 24px;
 }
 
 .status-pending {
@@ -156,11 +151,11 @@ body {
 }
 
 .del-btn {
+  padding: 8px 12px;
   background: #ee706d;
   color: white;
+  border: 1px #ed6561 solid;
   border-radius: 4px;
-  padding: 8px 12px;
-  border-style: none;
   cursor: pointer;
 }
 
@@ -175,14 +170,13 @@ body {
   height: 100%;
   width: 100%;
   background: rgba(0, 0, 0, 0.3);
-  z-index: 1;
   display: flex;
   justify-content: center;
 }
 
 .dialog-box {
-  width: 340px;
   align-self: center;
+  width: 340px;
   background: white;
   border-radius: 4px;
 }
@@ -194,9 +188,9 @@ body {
 #close-btn {
   display: block;
   float: right;
-  color: #666;
-  font-size: 16px;
   margin: 20px;
+  font-size: 16px;
+  color: #666;
 }
 
 #close-btn:active {
@@ -208,11 +202,11 @@ body {
 }
 
 .hint-icon {
-  color: #f1c826;
-  font-size: 24px;
-  margin-right: 12px;
   display: inline-block;
   vertical-align: top;
+  margin-right: 12px;
+  font-size: 24px;
+  color: #f1c826;
 }
 
 .hint-body {
@@ -220,39 +214,36 @@ body {
 }
 
 .hint-title {
-
   margin-bottom: 0;
-  line-height: 24px;
-  color: #333;
   font-size: 20px;
+  color: #333;
+  line-height: 24px;
 }
 
 .hint-text {
-  color: #666;
   margin-top: 8px;
   font-size: 14px;
-
+  color: #666;
 }
 
 #buttons {
-  text-align: right;
   padding: 16px;
+  text-align: right;
 }
 
 #buttons button {
   margin: 0 5px;
   padding: 6px 12px;
   font-size: 12px;
-  font-family: "Microsoft YaHei", sans-serif;
   border-radius: 3px;
 }
 
 
 #confirm-btn {
-  border: 1px solid;
   background-color: #3080fe;
-  border-color: #e2ddd5 #90897e #90897e #e2ddd5;
   color: white;
+  border: 1px solid;
+  border-color: #e2ddd5 #90897e #90897e #e2ddd5;
 }
 
 #confirm-btn:active {
@@ -260,9 +251,9 @@ body {
 }
 
 #cancel-btn {
+  color: #333;
   background-color: white;
   border: 1px solid;
-  color: #333;
   border-color: #bec1cb #6d7076 #6d7076 #bec1cb;
 }
 
